@@ -7,6 +7,7 @@ MovieJukebox 2.3 BETA
  - Enhancement    #997 Ability to turn off 'EXTRAS' processing
  - Enhancement   #1671 Add New:TV and New:Movies categories
  - Enhancement   #1687 Only load the required poster scanner plugins
+ - Fixed defect  #1702 ComingSoon plot and outline have TRAMA LUNGA & TRAMA BREVA in them
 
 MovieJukebox 2.2
 ----------------
